@@ -53,25 +53,37 @@ def checkNeedsSponsorship(component):
         file exists first.
     """
     urlopener = common.setupLaunchpadUrlOpener(launchpad_cookiefile)
-    
+
+    # Check where the package is and assign the appropriate variables.
     if component in ['main', 'restricted']:
         team = "ubuntu-core-dev"
         sponsor = "ubuntu-main-sponsors"
     else:
         team = "ubuntu-dev"
         sponsor = "ubuntu-universe-sponsors"
+    
+    # Try and open up Launchpad.
+    try: teamLPPage = urlopener.open('https://launchpad.net/~%s' % team).read()
+    except urllib2.HTTPError:
+        print >> sys.stderr, "Unable to connect to Launchpad."
+    
+    # Check if they are a member of the team.
+    if "You are an indirect member of this team:" in teamLPPage or \
+        "You are a member of this team." in teamLPPage:
+        return False # Sponsorship not required.
 
-    teamLPPage = urlopener.open('https://launchpad.net/~%s' % team).read()
-
-    if 'You are not a member of this team:' in teamLPPage:
+    # Check if they are not.
+    if "You are not a member of this team" in teamLPPage:
         print "You are not a member (direct or indirect) of the '%s' " \
             "team on Launchpad." % team
         print "Your sync request shall require an approval by a member of " \
-            "the %s team." % sponsor
-        print "before it is processed by a member of the Ubuntu Archive admins."
+            "the '%s'\nteam, who shall be subscribed to this bug report." % sponsor
+        print "This must be done before it can be processed by a member of " \
+            "the Ubuntu Archive team."
+        print "Should the above be incorrect, please press Control-C now to " \
+            "stop this script now\nand check the cookie file at:", launchpad_cookiefile
+        raw_input_exit_on_ctrlc() # Abort if necessary.
         return True # Sponsorship required.
-    else:
-        return False # Sponsorship not required.
 
 def cur_version_component(sourcepkg, release):
     '''Determine current package version in ubuntu.'''
